# hermes-archon-testor

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: config.example.yaml
deploy/archon/: install.sh
deploy/archon/workflows/: example.yaml
deploy/hermes/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
docs/: Hermes-Archon测试提效方案.md
docs/deployment/: archon.md  hermes.md
docs/plans/: ROADMAP.md
src/core/: __init__.py  config.py  logger.py
tests/: test_core.py
